<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/lytPlayerPadding">

    <TextView
        android:id="@+id/lblTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/dialogBanner"
        android:textSize="34sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/lblPregunta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/altMargin8"
        android:text="@string/dialogQuestion"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/btnPlayerLytMargin"
            android:layout_marginEnd="@dimen/btnPlayerLytMargin"
            android:layout_weight="1"
            android:text="@string/btnCancel" />

        <Button
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/btnPlayerLytMargin"
            android:layout_marginEnd="@dimen/btnPlayerLytMargin"
            android:layout_weight="1"
            android:text="@string/btnConfirm" />
    </LinearLayout>

</LinearLayout>