<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/lyt"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/linPadding">

    <EditText
        android:id="@+id/txt1"
        android:layout_width="@dimen/letWidth"
        android:layout_height="@dimen/letHeigth"
        android:layout_margin="@dimen/letMargins"
        android:layout_weight="1"
        android:background="@drawable/btnlet_layout_green"
        android:enabled="false"
        android:hint="@string/letHint"
        android:inputType="text"
        android:insetLeft="@dimen/letMargins"
        android:insetTop="@dimen/letMargins"
        android:insetRight="@dimen/letMargins"
        android:insetBottom="@dimen/letMargins"
        android:singleLine="true"
        android:text="@string/holderLetra1"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="48sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/txt2"
        android:layout_width="@dimen/letWidth"
        android:layout_height="@dimen/letHeigth"
        android:layout_margin="@dimen/letMargins"
        android:layout_weight="1"
        android:background="@drawable/btnlet_layout_orange"
        android:enabled="false"
        android:hint="@string/letHint"
        android:inputType="text"
        android:insetLeft="@dimen/letMargins"
        android:insetTop="@dimen/letMargins"
        android:insetRight="@dimen/letMargins"
        android:insetBottom="@dimen/letMargins"
        android:singleLine="true"
        android:text="@string/holderLetra2"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="48sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/txt3"
        android:layout_width="@dimen/letWidth"
        android:layout_height="@dimen/letHeigth"
        android:layout_margin="@dimen/letMargins"
        android:layout_weight="1"
        android:background="@drawable/btnlet_layout"
        android:enabled="false"
        android:hint="@string/letHint"
        android:inputType="text"
        android:insetLeft="@dimen/letMargins"
        android:insetTop="@dimen/letMargins"
        android:insetRight="@dimen/letMargins"
        android:insetBottom="@dimen/letMargins"
        android:singleLine="true"
        android:text="@string/holderLetra3"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="48sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/txt4"
        android:layout_width="@dimen/letWidth"
        android:layout_height="@dimen/letHeigth"
        android:layout_margin="@dimen/letMargins"
        android:layout_weight="1"
        android:background="@drawable/btnlet_layout_green"
        android:enabled="false"
        android:hint="@string/letHint"
        android:inputType="text"
        android:insetLeft="@dimen/letMargins"
        android:insetTop="@dimen/letMargins"
        android:insetRight="@dimen/letMargins"
        android:insetBottom="@dimen/letMargins"
        android:singleLine="true"
        android:text="@string/holderLetra4"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="48sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/txt5"
        android:layout_width="@dimen/letWidth"
        android:layout_height="@dimen/letHeigth"
        android:layout_margin="@dimen/letMargins"
        android:layout_weight="1"
        android:background="@drawable/btnlet_layout_orange"
        android:enabled="false"
        android:hint="@string/letHint"
        android:inputType="text"
        android:insetLeft="@dimen/letMargins"
        android:insetTop="@dimen/letMargins"
        android:insetRight="@dimen/letMargins"
        android:insetBottom="@dimen/letMargins"
        android:singleLine="true"
        android:text="@string/holderLetra5"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="48sp"
        android:textStyle="bold" />

</LinearLayout>