<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/lytPlayerPadding">

    <TextView
        android:id="@+id/lblTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/playerNameQuestion"
        android:textSize="34sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/txtPlayer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:fontFamily="sans-serif-black"
        android:hint="Player"
        android:inputType="textPersonName"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/btnPlayerLytMargin"
            android:layout_marginEnd="@dimen/btnPlayerLytMargin"
            android:layout_weight="1"
            android:text="@string/btnUnsave" />

        <Button
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/btnPlayerLytMargin"
            android:layout_marginEnd="@dimen/btnPlayerLytMargin"
            android:layout_weight="1"
            android:text="@string/btnSave" />
    </LinearLayout>

</LinearLayout>